RESOLVED FIXED117456
Fix issue where iframe content wasn't included in the accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=117456
Summary Fix issue where iframe content wasn't included in the accessibility tree
Ryosuke Niwa
Reported 2013-06-10 17:56:59 PDT
Consider merging https://chromium.googlesource.com/chromium/blink/+/af4e73e2bfb32fce56854ef0dab33077c7fa6bff Have RenderWidget notify the accessibility object when its widget changes, otherwise the AccessibilityRenderObject for the iframe might have a stale reference to the previous widget. (This wouldn't crash, it'd just result in an empty subtree until some other event triggered it to update.) Also, remove a check that made isAttachment return false if an iframe element had an ARIA role. I don't believe an ARIA role on an iframe should ever have the effect of hiding its contents - it's unlikely that's what the web author wanted, and if the web author really wants that they can use aria-hidden. This allows us to re-enable this test, that was previously failing flakily because of this bug: loading-iframe-updates-axtree.html
Attachments
patch (1.28 KB, patch)
2013-06-10 18:45 PDT, chris fleizach
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (652.54 KB, application/zip)
2013-06-10 22:05 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (718.72 KB, application/zip)
2013-06-13 17:47 PDT, Build Bot
no flags
patch (1.39 KB, patch)
2013-06-13 17:54 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion (666.01 KB, application/zip)
2013-06-13 20:01 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (643.66 KB, application/zip)
2013-06-20 12:41 PDT, Build Bot
no flags
chris fleizach
Comment 1 2013-06-10 17:59:42 PDT
The RenderWidget.cpp change in this diffset we should take, but I am not convinced about the other one (where ariaRole=Unknown is removed).. if someone sets a role on the <iframe> i'm not convinced we still always want to expose it... i'm sure that would break some existing mac test. however, the behavior there may need to be more refined
chris fleizach
Comment 2 2013-06-10 18:45:45 PDT
Ryosuke Niwa
Comment 3 2013-06-10 19:59:36 PDT
Thanks for the merge!
Build Bot
Comment 4 2013-06-10 22:05:05 PDT
Comment on attachment 204275 [details] patch Attachment 204275 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/799099 New failing tests: editing/selection/selection-plugin-clear-crash.html plugins/destroy-during-npp-new-object-with-fallback-content.html plugins/destroy-during-npp-new.html
Build Bot
Comment 5 2013-06-10 22:05:07 PDT
Created attachment 204283 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 6 2013-06-13 17:47:50 PDT
Comment on attachment 204275 [details] patch Attachment 204275 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/852238 New failing tests: editing/selection/selection-plugin-clear-crash.html plugins/update-widgets-crash.html plugins/destroy-during-npp-new.html plugins/destroy-during-npp-new-object-with-fallback-content.html
Build Bot
Comment 7 2013-06-13 17:47:51 PDT
Created attachment 204655 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
chris fleizach
Comment 8 2013-06-13 17:54:07 PDT
Created attachment 204656 [details] patch A patch that doesn't crash (I think)
Build Bot
Comment 9 2013-06-13 20:01:38 PDT
Comment on attachment 204656 [details] patch Attachment 204656 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/851219 New failing tests: editing/selection/selection-plugin-clear-crash.html plugins/destroy-during-npp-new-object-with-fallback-content.html plugins/destroy-during-npp-new.html fast/repaint/table-cell-collapsed-border-scroll.html
Build Bot
Comment 10 2013-06-13 20:01:40 PDT
Created attachment 204665 [details] Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Build Bot
Comment 11 2013-06-20 12:41:02 PDT
Comment on attachment 204656 [details] patch Attachment 204656 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/887094 New failing tests: editing/selection/selection-plugin-clear-crash.html plugins/destroy-during-npp-new-object-with-fallback-content.html plugins/destroy-during-npp-new.html plugins/update-widgets-crash.html
Build Bot
Comment 12 2013-06-20 12:41:04 PDT
Created attachment 205112 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Radar WebKit Bug Importer
Comment 13 2014-02-07 11:33:31 PST
Csaba Osztrogonác
Comment 14 2014-02-13 04:13:21 PST
Comment on attachment 204275 [details] patch Cleared Ryosuke Niwa's review+ from obsolete attachment 204275 [details] so that this bug does not appear in http://webkit.org/pending-commit.
EWS
Comment 15 2022-10-11 14:47:04 PDT
Committed 255407@main (0efc0bf9f325): <https://commits.webkit.org/255407@main> Reviewed commits have been landed. Closing PR #5003 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.