Fix issue where iframe content wasn't included in the accessibility tree

Fix issue where iframe content wasn't included in the accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=117456

Reviewed by Chris Fleizach.

Merge - https://chromium.googlesource.com/chromium/blink/+/af4e73e2bfb32fce56854ef0dab33077c7fa6bff

Have RenderWidget notify the accessibility object when its widget changes, otherwise the
AccessibilityRenderObject for the iframe might have a stale reference to the previous widget. (This
would not crash, it would just result in an empty subtree until some other event triggered it to
update.)

This allows us to re-enable this test, that was previously failing flakily or being skipped because
of this bug: loading-iframe-updates-axtree.html

* Source/WebCore/rendering/RenderWidget.cpp:
(WebCore::RenderWidget::setWidget): Update to add stale condition
* LayoutTests/platform/win/TestExpectations: Remove Skipped Test "loading-iframe-updates-axtree.html"
* LayoutTests/platform/wincairo-wk1/TestExpectations: Remove Skipped Test "loading-iframe-updates-axtree.html"
* LayoutTests/platform/wk2/TestExpectations: Remove Skipped Test "loading-iframe-updates-axtree.html"
* LayoutTests/platform/mac/accessibility/loading-iframe-updates-axtree-expected.txt: Add Platform Specific Test Expectations
* LayoutTests/accessibility/loading-iframe-updates-axtree-expected.txt: Update Test Expectations

Canonical link: https://commits.webkit.org/255407@main